--- a/css/style.css
+++ b/css/style.css
@@ -183,3 +183,75 @@ body {
     font-size: 100px;
     color: #2A86B1;
 }
+
+.info{
+     margin: 48px 0 44px; 
+}
+
+.info__wrap{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 30px;
+}
+
+
+.new{
+    max-width: 825px;
+    width: 100%;
+}
+
+.info__h{
+    font-family: 'Rubik',sans-serif;
+font-size: 20px;
+font-weight: 700;
+line-height: 24px;
+color: #686868;
+margin-bottom: 22px;
+}
+
+.news__p{
+    font-family: 'Rubik',sans-serif;
+font-size: 16px;
+font-weight: 400;
+line-height: 19px;
+color: #545454;
+margin-bottom: 15px;
+background: #FFFFFF;
+border-radius: 8px;
+padding: 15px 15px;
+}
+
+.services{
+    max-width: 255px;
+    width: 100%;
+}
+
+
+.serv__card{
+    padding: 17px 15px ;
+    background: #FFFFFF;
+border-radius: 8px;
+margin-bottom: 15px;
+display: flex;
+align-items: center;
+gap: 15px;
+}
+
+.serv__h{
+    font-family: 'Rubik',sans-serif;
+font-size: 17px;
+font-weight: 400;
+line-height: 16px;
+margin-bottom: 5px;
+color: #323232;
+}
+
+.serv__p{
+    font-family: 'Rubik',sans-serif;
+font-size: 14px;
+font-weight: 300;
+line-height: 13px;
+color: #000;
+
+}
