--- a/css/style.css
+++ b/css/style.css
@@ -262,3 +262,50 @@ body {
     letter-spacing: 0em;
     text-align: left;
 }
+
+.footer{
+    background: #3FA5D5;
+}
+
+.footer__wrap{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+padding-top: 40px;
+padding-bottom: 40px;
+}
+
+.footer__logo{
+    font-family: 'Rubik',sans-serif;
+font-size: 50px;
+font-weight: 700;
+line-height: 59px;
+color: #FFFFFF;
+
+}
+
+.contacts{
+display: flex;
+flex-direction: column;
+gap: 15px;
+    
+}
+ 
+
+.contacts__link{
+    font-family: 'Rubik',sans-serif;
+font-size: 18px;
+font-weight: 700;
+line-height: 21px;
+color: #FFFFFF;
+}
+
+
+.contacts__email{
+    font-family: 'Rubik',sans-serif;
+font-size: 16px;
+font-weight: 400;
+line-height: 19px;
+color: #FFFFFF;
+
+}
